# veilcast

./: .gitignore  Makefile  README.md
.github/workflows/: slither.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
backend/scripts/: db_init.sh  db_init.sql  demo_seed.sql  list_tables.sh  poseidon_merkle.mjs  poseidon_merkle_noir.mjs  run_prover_inputs.mjs  seed_demo_data.sh  show_latest.sh
backend/src/: doc.rs  error.rs  indexer.rs  lib.rs  main.rs  repo.rs  types.rs  zk.rs
backend/tests/: indexer_anvil.rs  membership_root.rs  prover_inputs.rs
contracts/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  foundry.toml  package.json  slither.config.json
contracts/script/: Deploy.s.sol  DeployVerifier.s.sol
contracts/script/zk/: generate_verifier_contract.mjs
contracts/src/: VeilCastPolls.sol  Verifier.sol
contracts/test/: README.md  VeilCastPolls.t.sol  VeilCastPollsIntegration.t.sol  package-lock.json  package.json
contracts/test/scripts/: generate_proof.js  generate_verifier_contract.sh  write_verifier.mjs
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: veilcast.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CategoryFilter.tsx  Hero.tsx  Navbar.tsx  PollCard.tsx
frontend/src/lib/: api.ts  auth.ts  proof.ts  time.ts  types.ts  zk.ts
frontend/src/pages/: CreatePoll.tsx  Home.tsx  Leaderboard.tsx  Login.tsx  PollDetail.tsx  Profile.tsx
frontend/src/shims/: pino-browser.ts
infra/: .env.backend.example  .env.frontend.example  .gitignore  docker-compose.yml
zk/: .dockerignore  Dockerfile  Makefile  Nargo.toml  Prover.toml  README.md  entrypoint.sh
zk/src/: main.nr
