[package]
name = "veilcast-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99", features = ["display"] }
once_cell = "1.19"
tower = "0.4"
http = "1"
hyper = { version = "1", features = ["full"] }
sha2 = "0.10"
num-bigint = "0.4"
rand = "0.8"
ethers = { version = "2", default-features = false, features = [
    "abigen",
    "ws",
    "rustls",
] }
utoipa = { version = "4", features = ["chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower-http = { version = "0.5", features = ["cors"] }
home = "=0.5.5"
base64ct = "=1.7.2"
hex = "0.4"

[dev-dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process"] }
serde_json = "1.0"
hex = "0.4"
tempfile = "3"
toml = "0.8"
num-bigint = "0.4"
